// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart cap renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c1 {
  max-width: 100%;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M
              NaN,NaN L
              NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="#00CCEB"
      >
        <path
          d="M 0,192M NaN,192 L NaN,NaN L NaN,NaNL NaN,192 Z"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c1 {
  max-width: 100%;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart size renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c1 {
  max-width: 100%;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={96}
    preserveAspectRatio="none"
    viewBox="-12 -12
            120 120"
    width={96}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            216 216"
    width={192}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={384}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 408"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={768}
    preserveAspectRatio="none"
    viewBox="-12 -12
            792 792"
    width={768}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={1152}
    preserveAspectRatio="none"
    viewBox="-12 -12
            1176 1176"
    width={1152}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart thickness renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c1 {
  max-width: 100%;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-3 -3
            390 198"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={6}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-6 -6
            396 204"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={12}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-24 -24
            432 240"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={48}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-48 -48
            480 288"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={96}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart type renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c1 {
  max-width: 100%;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M NaN,NaN
              L NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M
              NaN,NaN L
              NaN,NaN"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12
            408 216"
    width={384}
  >
    <title />
    <g
      stroke="#00CCEB"
      strokeLinecap="square"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="#00CCEB"
      >
        <path
          d="M 0,192M NaN,192 L NaN,NaN L NaN,NaNL NaN,192 Z"
        />
      </g>
    </g>
  </svg>
</div>
`;
